# docs/swagger/swagger.yaml
@@ -4,83 +4,173 @@ info:
 paths:
   /api/v1/articles:
     get:
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: State
+        in: formData
+        name: state
+        type: integer
+      - description: tag_id
+        in: formData
+        name: tag_id
+        type: integer
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{"lists": [], "total": 0},"msg":"ok"}'
+          description: '{"code":200,"data":{"lists": [], "total": 0},"message":"ok"}'
           schema:
             type: string
       summary: 获取多个文章
+      tags:
+      - articles
     post:
       parameters:
-      - description: Name
-        in: query
-        name: name
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Title
+        in: formData
+        name: title
+        required: true
+        type: string
+      - description: Desc
+        in: formData
+        name: desc
+        required: true
+        type: string
+      - description: Content
+        in: formData
+        name: content
+        required: true
+        type: string
+      - description: Created_by
+        in: formData
+        name: created_by
+        required: true
+        type: string
+      - description: cover_image_url
+        in: formData
+        name: cover_image_url
+        required: true
+        type: file
+      - description: CreatedBy
+        in: formData
+        name: created_by
         required: true
         type: string
       - description: State
-        in: query
+        in: formData
         name: state
-        type: integer
-      - description: CreatedBy
-        in: query
-        name: created_by
         type: integer
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":ID,"msg":"ok"}'
+          description: '{"code":200,"data":ID,"message":"ok"}'
           schema:
             type: string
       summary: 新增文章
+      tags:
+      - articles
   /api/v1/articles/{id}:
     delete:
       parameters:
-      - {}
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":null,"msg":"ok"}'
+          description: '{"code":200,"data":null,"message":"ok"}'
           schema:
             type: string
       summary: 删除文章
+      tags:
+      - articles
     get:
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{},"msg":"ok"}'
+          description: '{"code":200,"data":{},"message":"ok"}'
           schema:
             type: string
       summary: 获取单个文章
+      tags:
+      - articles
     put:
       parameters:
-      - {}
-      - description: ID
-        in: query
-        name: name
+      - description: Bearer Token
+        in: header
+        name: Authorization
         required: true
+        type: string
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: tag_id
+        in: formData
+        name: tag_id
+        required: true
+        type: integer
+      - description: title
+        in: formData
+        name: title
+        type: string
+      - description: desc
+        in: formData
+        name: desc
+        type: string
+      - description: content
+        in: formData
+        name: content
+        type: string
+      - description: ModifiedBy
+        in: formData
+        name: modified_by
         type: string
       - description: State
-        in: query
+        in: formData
         name: state
         type: integer
-      - description: ModifiedBy
-        in: query
-        name: modified_by
-        required: true
-        type: string
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":null,"msg":"ok"}'
+          description: '{"code":200,"data":null,"message":"ok"}'
           schema:
             type: string
       summary: 修改文章
+      tags:
+      - articles
   /api/v1/tags:
     get:
       parameters:
